# clowbot

./: .env.docker.example  .env.example  .gitignore  ARCHITECTURE.md  BACKLOG.md  BOOTSTRAP.md  CLOWDBOT_SUPERMISSION.md  Dockerfile  MINDMAP.md  MISSION.md  NEXT.md  PORTFOLIO.md  PROMPT_TEMPLATE.md  README.md  STATUS.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
docs/: outbox_payload_spec_v1.md  outbox_preview_pack_spec_v1.md  project_library.md  runbook_local_stack.md
schemas/: outbox_payload_v1.schema.json
scripts/: debug_router.ps1  e2e.ps1  e2e_always_on.cmd  e2e_always_on.ps1  e2e_always_on_config.example.json  e2e_on_demand.ps1  e2e_send_summary.ps1  gateway_startup.cmd  gateway_startup.log.cmd  help_on_demand.ps1  inspect_e2e_task.ps1  install_startup_triggers.ps1  poll_status.ps1  register_e2e_task.ps1  reset_e2e_on_demand_state.ps1  reset_router_state.ps1  restart_stack.ps1  run_workflow.ps1  run_workflow_irm.ps1  run_workflow_unique.ps1  set_e2e_task_settings.ps1  smoke.ps1  smoke_always_on.cmd  smoke_always_on.ps1  smoke_on_demand.ps1  smoke_startup.cmd  smoke_startup.ps1  smoke_startup_wrapper.cmd  status_on_demand.ps1  stop_stack.ps1  telegram_router.cmd  telegram_router.ps1  wait_deps.py
skills/: _SKILL_TEMPLATE.md  grant_application_pipeline.md  sales_outreach_sequence.md  submit_article_package.md
tests/: test_jarvis_endpoints.py  test_memory_bootstrap.py  test_outbox_dispatcher.py  test_outbox_github_adapter.py  test_outbox_idempotency.py  test_outbox_payload_validation.py  test_policy_allowlist_document.py  (+9 more)
(+73 files in other folders)
